# EEG

./: .gitignore  ARCHITECTURE.md  LICENSE  MANIFEST.in  README.md  action.yml  db.sqlite3  docker-compose.prod.yml  manage.py  pyproject.toml  requirements-runtime-ml.txt  requirements.txt
.github/workflows/: eeg-scan.yml  publish.yml
apps/: __init__.py
apps/accounts/: __init__.py  activity_log.py  admin.py  apps.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py
apps/api/: __init__.py  gateway_audit.py  gateway_views.py  middleware.py  openapi_discovery.py  openapi_schema.py  operations.py  rate_limit.py  urls.py  views.py
apps/projects/: __init__.py  admin.py  apps.py  forms.py  gateway_sync.py  models.py  path_utils.py  repo_storage.py  signals.py  urls.py  utils.py  views.py
apps/security/: __init__.py  admin.py  agent_control.py  apps.py  background.py  code_semantic_index.py  consumers.py  finding_context.py  finding_dedup.py  finding_filters.py  models.py  routing.py  runtime_findings.py  scan_cancellation.py  scan_concurrency.py  scan_reconcile.py  scan_workers.py  services.py  threat_categories.py  threat_graph.py  threat_graph_analysis.py  trace_ingest.py
apps/ui/: __init__.py  apps.py  context_processors.py  dashboard_charts.py  dashboard_context.py  timeline.py  urls.py  views.py
core/: __init__.py  asgi.py  celery.py  middleware.py  settings.py  urls.py  views_errors.py  wsgi.py
docs/: CLI.md  RUNTIME_ML.md
eeg/: __init__.py  __main__.py  cli.py  cli_serve.py  collector.py  config.py  pipeline.py  sarif.py
eeg/analysis/: __init__.py  code_context.py  semantic_trace.py
eeg/auth_scanner/: __init__.py  aws_scanner.py  azure_scanner.py  check_runner.py  gcp_scanner.py
eeg/compliance/: __init__.py  framework_evaluate.py  posture_cards.py  realtime_audit.py  signal_control_bridge.py
eeg/detectors/: __init__.py  base.py  boundary_policy_pack.py  guardrail.py  iac.py  iam.py  logging_monitor.py  model.py  network.py  policy.py  prompt.py  secrets.py  storage.py
eeg/gateway/: __init__.py  capability_executor.py  cloud_safety.py  connector_dispatch.py  decision_contract.py  destinations.py  mcp_tools.py  model_route.py  multimodal.py  pass_through.py  prompt_text.py  proxy.py  quotas.py  redis_client.py  response_headers.py  routing_plane.py  slo_metrics.py  streaming_proxy.py  url_safety.py  vendor_executor.py
eeg/probes/: __init__.py  aisec_http_surface.py  auto_redteam.py  gateway_surface.py  interaction_benchmark.py  mcp_jsonrpc_handshake.py  mcp_transport.py
eeg/rules/: bundle_loader.py  catalog.py  catalog.yaml  catalog_loader.py  text_matcher.py
eeg/runtime/: __init__.py  aurora_veil.py  conduit_gates.py  confidence.py  ember_pulse.py  guard.py  lattice_pipeline.py  pi_neural_guard.py  policy.py  policy_config.py  risk_scorer.py  runtime_ml_guard.py  runtime_ml_models.yaml  runtime_ml_registry.py  script_unmask.py  shard_buffer.py  sigil_weave.py  spectral_probe.py  text_normalize.py  tool_weave.py  verdict_forge.py
eeg/scans/: __init__.py  a2a_agent_surface.py  agent_forensics.py  ainspect_pack.py  cloud_static_rules.py  code_security.py  dependency_vuln.py  gateway_oss_surface.py  mcp_client_config.py  mcp_tool_response_leak.py  memoryguard_surface.py  model_artifact.py  redteam_marker_surface.py  serialization_guard.py  textguard_unicode.py
eeg/utils/: __init__.py  auth.py  csvreport.py  htmlreport.py  jsonreport.py  repocrawler.py  threadpoolexecutor.py
eeg/vuln_manager/: __init__.py  ai_packages.py  code_security.py  cve_fetcher.py  dependency_parser.py  dependency_scan.py  github_advisory.py  osv_fetcher.py
eeg/webdata/: __init__.py
eeg_security.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: check_runtime_ml.py  check_runtime_ml_models.py
templates/: 403.html  404.html  base.html
tests/: __init__.py  conftest.py  pi_neural_test_helpers.py  test_agent_auto_register.py  test_ai_threat_intel.py  test_async_scans.py  test_branded_errors.py  test_bundle_loader.py  test_catalog_loader.py  test_cli.py  test_code_semantic_index.py  test_collector.py  test_compliance_agents_traces.py  test_dashboard_charts.py  test_dashboard_project_context.py  test_dashboard_timeline.py  test_dependency_parser_multilang.py  test_detectors.py  test_finding_context.py  test_finding_dedup.py  test_findings_explorer.py  test_openapi_discovery.py  test_openapi_schema.py  test_osv_fetch_dependencies.py  test_path_allowlist.py  test_project_path_utils.py  test_project_scoped_findings.py  test_prompt_text_extract.py  test_repo_storage.py  test_runtime_lattice.py  test_runtime_ml_registry.py  test_runtime_security.py  test_sarif.py  test_scan_cancellation.py  test_scan_concurrency.py  test_scan_family_concurrency.py  test_scan_fixtures.py  test_scan_progress.py  test_scan_reconcile.py  test_semantic_trace.py  (+11 more)
(+158 files in other folders)
