[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-security"
version = "2.2.0"
description = "Extensive Exposure Guard — Multi-Cloud AI Security & Vulnerability Management Framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "findthehead", email = "findthehead@proton.me" },
]
keywords = ["ai", "security", "cloud", "aws", "azure", "gcp", "devsecops", "vulnerability", "scanner", "guardrails", "bedrock", "vertex", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]
azure = [
    "azure-identity>=1.15.0",
    "azure-mgmt-cognitiveservices>=13.5.0",
    "azure-mgmt-resource>=23.0.0",
]
gcp = ["google-cloud-aiplatform>=1.40.0"]
all = [
    "boto3>=1.34.0",
    "azure-identity>=1.15.0",
    "azure-mgmt-cognitiveservices>=13.5.0",
    "azure-mgmt-resource>=23.0.0",
    "google-cloud-aiplatform>=1.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
eeg = "eeg.cli:main"

[project.urls]
Homepage = "https://github.com/findthehead/eeg"
Repository = "https://github.com/findthehead/eeg"
Issues = "https://github.com/findthehead/eeg/issues"

[tool.setuptools.packages.find]
include = ["eeg*"]

[tool.setuptools.package-data]
eeg = ["rules/static/*.yaml", "rules/dynamic/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
