[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-security"
version = "2.5.0"
description = "Extensive Exposure Guard — AI/agent static scans, runtime gateway, OSS dashboard, and CI/GitHub Action"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "findthehead", email = "findthehead@proton.me" },
]
keywords = ["ai", "security", "agent", "gateway", "sast", "sarif", "cloud", "aws", "azure", "gcp", "devsecops", "vulnerability", "scanner", "guardrails", "bedrock", "vertex", "openai", "django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "jinja2>=3.1.2",
    "python-dateutil>=2.9.0",
    # Full OSS console (eeg --serve)
    "Django>=5.0,<6",
    "django-htmx>=1.21.0",
    "cryptography>=42.0.0",
    "gunicorn>=22.0.0",
    "whitenoise>=6.6.0",
    "channels>=4.0.0",
    "channels-redis>=4.2.0",
    "daphne>=4.1.0",
    "celery>=5.4.0",
    "django-celery-beat>=2.6.0",
    "redis>=5.0.0",
    "django-redis>=5.4.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]
azure = [
    "azure-identity>=1.15.0",
    "azure-mgmt-cognitiveservices>=13.5.0",
    "azure-mgmt-resource>=23.0.0",
]
gcp = ["google-cloud-aiplatform>=1.40.0"]
all = [
    "boto3>=1.34.0",
    "azure-identity>=1.15.0",
    "azure-mgmt-cognitiveservices>=13.5.0",
    "azure-mgmt-resource>=23.0.0",
    "google-cloud-aiplatform>=1.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
eeg = "eeg.cli:main"

[project.urls]
Homepage = "https://github.com/findthehead/eeg"
Repository = "https://github.com/findthehead/eeg"
Issues = "https://github.com/findthehead/eeg/issues"

[tool.setuptools.packages.find]
include = ["eeg*", "apps*", "core*"]

[tool.setuptools.package-data]
eeg = [
    "rules/static/*.yaml",
    "rules/dynamic/*.yaml",
    "rules/policy/*.yaml",
    "rules/bundles/**/*.yaml",
    "runtime/packs/*.yaml",
    "webdata/templates/**/*",
    "webdata/static/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short --import-mode=importlib"
